# Coral

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: ConfigureTarget.cmake  TargetEmbedFiles.cmake
examples/CoralDemoApp/: CMakeLists.txt
examples/CoralDemoApp/include/: TexturedWithLightingShader.h
examples/CoralDemoApp/src/: main.cpp
examples/CoralDemoApp/src/Shaders/: UniformColor.hlsl
resources/include/: Cube.hpp
src/: CMakeLists.txt
src/Coral/: CMakeLists.txt
src/Coral/include/Coral/: Buffer.h  Buffer.hpp  BufferView.hpp  CommandBuffer.h  CommandBuffer.hpp  CommandQueue.hpp  Context.h  Context.hpp  Coral.hpp  Core.h  DescriptorSet.hpp  Fence.h  Framebuffer.h  Framebuffer.hpp  ImGui_Impl_Coral.h  Image.h  Image.hpp  PipelineState.h  PipelineState.hpp  RAII.hpp  Sampler.h  Sampler.hpp  Semaphore.h  Semaphore.hpp  ShaderModule.hpp  Surface.hpp  Swapchain.h  Types.hpp  UniformBlockBuilder.hpp
src/Coral/private/include/Coral/: Buffer.hpp  BufferBase.hpp  BufferPool.hpp  CommandBuffer.hpp  CommandBufferBase.hpp  CommandQueue.hpp  CommandQueueBase.hpp  Context.hpp  ContextBase.hpp  Fence.hpp  Finally.hpp  Framebuffer.hpp  FramebufferBase.hpp  ImGui_Impl_Coral.hpp  Image.hpp  ImageBase.hpp  PipelineState.hpp  Sampler.hpp  SamplerBase.hpp  Semaphore.hpp  SemaphoreBase.hpp  ShaderModule.hpp  ShaderModuleBase.hpp  SurfaceBase.hpp  Swapchain.hpp  SwapchainBase.hpp  Visitor.hpp
src/Coral/private/include/Coral/Vulkan/: BufferImpl.hpp  BufferViewImpl.hpp  CommandBufferImpl.hpp  CommandQueueImpl.hpp  ContextImpl.hpp  FenceImpl.hpp  FramebufferImpl.hpp  Fwd.hpp  ImGuiImpl.hpp  ImageImpl.hpp  PipelineStateImpl.hpp  Resource.hpp  SamplerImpl.hpp  SemaphoreImpl.hpp  ShaderModuleImpl.hpp  SurfaceImpl.hpp  SwapchainImpl.hpp  Vulkan.hpp  VulkanFormat.hpp
src/Coral/private/src/: Buffer.cpp  BufferPool.cpp  CommandBuffer.cpp  CommandQueue.cpp  Context.cpp  Coral.cpp  Fence.cpp  Framebuffer.cpp  ImGui_Impl_Coral.cpp  Image.cpp  PipelineState.cpp  Sampler.cpp  Semaphore.cpp  ShaderModule.cpp  Swapchain.cpp
src/Coral/private/src/Vulkan/: BufferImpl.cpp  BufferViewImpl.cpp  CommandBufferImpl.cpp  CommandQueueImpl.cpp  ContextImpl.cpp  FenceImpl.cpp  FramebufferImpl.cpp  ImGuiImpl.cpp  ImGui_Impl_Coral.cpp  ImageImpl.cpp  PipelineStateImpl.cpp  Resource.cpp  SamplerImpl.cpp  SemaphoreImpl.cpp  ShaderModuleImpl.cpp  SurfaceImpl.cpp  SwapchainImpl.cpp  VulkanLinux.cpp  VulkanWin32.cpp
src/Coral/public/include/Coral/: Buffer.h  Buffer.hpp  CommandBuffer.h  CommandBuffer.hpp  CommandQueue.h  CommandQueue.hpp  Context.h  Context.hpp  Coral.h  Coral.hpp  CoralFwd.hpp  Core.h  Fence.h  Fence.hpp  Framebuffer.h  Framebuffer.hpp  ImGui_Impl_Coral.hpp  Image.h  Image.hpp  PipelineState.h  PipelineState.hpp  Sampler.h  ShaderModule.h  ShaderModule.hpp  Surface.hpp  Swapchain.h  Swapchain.hpp  Types.hpp
src/Coral/src/: AsyncTaskQueue.cpp  Buffer.cpp  Buffer.hpp  BufferPool.cpp  BufferPool.hpp  BufferViewBase.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandQueue.cpp  CommandQueue.hpp  Context.cpp  Context.hpp  ContextBase.hpp  Coral.cpp  Coral.hpp  Core.cpp  Fence.cpp  Fence.hpp  FenceBase.hpp  Finally.hpp  Framebuffer.cpp  Framebuffer.hpp  ImGui_Impl_Coral.cpp  Image.cpp  Image.hpp  PipelineState.cpp  PipelineState.hpp  PipelineStateBase.hpp  RAII.cpp  Sampler.cpp  Semaphore.cpp  Semaphore.hpp  ShaderModule.cpp  ShaderModule.hpp  Swapchain.cpp  Swapchain.hpp  UniformBlockBuilder.cpp  Visitor.hpp
src/Coral/src/Vulkan/: BufferImpl.cpp  BufferImpl.hpp  BufferViewImpl.cpp  BufferViewImpl.hpp  CommandBufferImpl.cpp  CommandBufferImpl.hpp  CommandQueueImpl.cpp  CommandQueueImpl.hpp  ContextImpl.cpp  ContextImpl.hpp  DescriptorSetImpl.cpp  DescriptorSetImpl.hpp  DescriptorSetPool.cpp  DescriptorSetPool.hpp  FenceImpl.cpp  FenceImpl.hpp  FramebufferImpl.cpp  FramebufferImpl.hpp  ImGuiImpl.cpp  ImGuiImpl.hpp  ImageImpl.cpp  ImageImpl.hpp  PipelineStateImpl.cpp  PipelineStateImpl.hpp  Resource.cpp  Resource.hpp  SamplerImpl.cpp  SamplerImpl.hpp  SemaphoreImpl.cpp  SemaphoreImpl.hpp  ShaderModuleImpl.cpp  ShaderModuleImpl.hpp  SurfaceImpl.cpp  SurfaceImpl.hpp  SurfaceWin32.cpp  SurfaceWin32.hpp  SwapchainImpl.cpp  SwapchainImpl.hpp  Vulkan.hpp  VulkanFormat.hpp  (+4 more)
src/Examples/: CMakeLists.txt
src/Examples/CoralDemoApp/: CMakeLists.txt
src/Examples/CoralDemoApp/src/: Shader.slang  main.cpp
src/Resources/: CMakeLists.txt
src/ShaderLanguage/: CMakeLists.txt
src/ShaderLanguage/include/Coral/: ShaderLanguage.hpp
src/ShaderLanguage/include/Coral/ShaderGraph/: Compiler.hpp  CompilerGLSL.hpp  CompilerSPV.hpp  ShaderGraph.hpp
src/ShaderLanguage/include/Coral/ShaderLanguage/: Attribute.hpp  Binding.hpp  Compiler.hpp  CompilerGLSL.hpp  CompilerSPV.hpp  ControlFlow.hpp  Expression.hpp  Expressions.hpp  Functions.hpp  Matrix.hpp  Node.hpp  Parameter.hpp  Sampler.hpp  Scalar.hpp  ShaderGraph.hpp  ShaderModule.hpp  UniformBuffer.hpp  Value.hpp  Variable.hpp  Vector.hpp
src/ShaderLanguage/src/: CompilerGLSL.cpp  CompilerSPV.cpp  Expression.cpp  Expressions.cpp  Node.cpp  ShaderGraph.cpp  ShaderModule.cpp  Value.cpp  Variable.cpp  Visitor.hpp
src/Util/: CMakeLists.txt
src/Util/include/Coral/Util/: RAII.hpp  UniformBlockBuilder.hpp
src/Util/src/: UniformBlockBuilder.cpp
test/: CMakeLists.txt
test/src/: BufferTests.cpp  BufferViewTests.cpp  Catch.cpp  Catch.hpp  ContextTests.cpp  UniformBlockBuilderTests.cpp
tools/: CMakeLists.txt
tools/CoralShaderCompiler/: CMakeLists.txt
tools/CoralShaderCompiler/include/Coral/: HeaderGenerator.h  ShaderCompiler.h  ShaderIncluder.h
tools/CoralShaderCompiler/src/: ShaderCompiler.cpp  ShaderIncluder.cpp
tools/CoralShaderCompilerCLI/: CMakeLists.txt
tools/CoralShaderCompilerCLI/cmake/: CoralShaderCompiler.cmake.in
tools/CoralShaderCompilerHeadless/: CMakeLists.txt
tools/CoralShaderCompilerHeadless/cmake/: CoralShaderCompiler.cmake.in
tools/CoralShaderCompilerHeadless/src/: main.cpp
